package com.jovisco.tutorial.patterns.factorymethods;

public class Square implements Shape {
    @Override
    public void draw() {
        System.out.println("Drawing a square ...");
    }
}
